[package]
name = "vcontrol"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[[bin]]
name = "vcontrol"
path = "src/vcontrol.rs"

[[bin]]
name = "vclient"
path = "src/vclient.rs"

[lib]
name = "vcontrol"
crate-type = ["staticlib", "rlib"]

[dependencies]
libc = { version = "0.2", git = "https://github.com/rust-lang/libc", branch = "master" }
nix = "0.12"
itertools = "0.8"
byteorder = "1"
clap = "2.32"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"

[build-dependencies]
bindgen = "0.45"
cbindgen = "0.6"
glob = "0.2"
