[package]
name = "vcontrol"
version = "0.1.0"
authors = ["Markus Reiter <me@reitermark.us>"]
edition = "2018"

[features]
cli = ["clap"]

[[bin]]
name = "vcontrol"
path = "src/bin/vcontrol.rs"
required-features = ["cli"]

[[bin]]
name = "vclient"
path = "src/bin/vclient.rs"
required-features = ["cli"]

[lib]
name = "vcontrol"
crate-type = ["staticlib", "rlib"]

[dependencies]
clap = { version = "2.32", optional = true }
chrono = "0.4"
serial = "0.4"
serial-core = "0.4"
serde = "1"
serde_derive = "1"
serde_yaml = "0.8"
serde_json = "1"
yaml-merge-keys = { version = "0.3.0", features = [ "serde_yaml" ] }
